--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.11.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -34,6 +34,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  get: ^4.6.5
+  flutter_rating_bar: ^4.0.1
+  url_launcher: ^6.0.5
+  table_calendar: ^3.0.6
+  splashscreen: ^1.3.5
+  flutter_svg: ^1.1.4
+  otp_text_field: ^1.1.3
+  flutter_otp_text_field: ^1.1.0+2
   
 
 dev_dependencies:
