--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_svg: ^1.1.4
   otp_text_field: ^1.1.3
   flutter_otp_text_field: ^1.1.0+2
+  dropdown_button2: ^1.7.2
   
 
 dev_dependencies:
