--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   otp_text_field: ^1.1.3
   flutter_otp_text_field: ^1.1.0+2
   dropdown_button2: ^1.7.2
+  flutter_switch: ^0.2.2
+  syncfusion_flutter_sliders: ^18.4.49-beta
   
 
 dev_dependencies:
