--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,6 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   url_launcher: ^6.0.5
   table_calendar: ^3.0.6
-  splashscreen: ^1.3.5
   flutter_svg: ^1.1.4
   otp_text_field: ^1.1.3
   flutter_otp_text_field: ^1.1.0+2
@@ -46,6 +45,8 @@ dependencies:
   flutter_switch: ^0.2.2
   syncfusion_flutter_sliders: ^18.4.49-beta
   file_picker: ^2.1.7
+  flutter_hooks: ^0.18.5+1
+  flutter_secure_storage: ^4.2.1
   
 
 dev_dependencies:
